fix: numbers on ticks slightly cut off

--- a/frontend/src/components/HourTicks.scss
+++ b/frontend/src/components/HourTicks.scss
@@ -1,5 +1,5 @@
 .hourticks {
-  width: 50px;
+  width: 60px;
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
     flex-direction: column;
     height: 10px;
     width: 10px;
-    margin-left: 40px;
+    margin-left: 50px;
   }
 
   .hour-text {
@@ -25,6 +25,6 @@
     padding: 0; // remove padding if any
     line-height: 1; // keeps text compact (can tweak e.g. 1.2)
     display: inline-block; // shrink-wraps the content
-    margin-right: 15px;
+    margin-right: 10px;
   }
 }
